--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -40,7 +40,7 @@
         <%= simple_form_for @message, remote: true  do |f| %>
         <div class="row">
           <div class="col-xs-12 col-sm-6">
-            <%= f.input :name %>
+            <%= f.input :name, label: 'Nom/Société' %>
             <span class="error" id="name-errro"></span>
           </div>
           <div class="col-xs-12 col-sm-6">
@@ -48,7 +48,7 @@
             <span class="error" id="email-errro"></span>
           </div>
         </div>
-        <%= f.input :content %>
+        <%= f.input :content, label: 'Message' %>
         <span class="error" id="content-errro"></span>
         <%= f.button :submit, value: 'Demande informations', class: 'loxam-btn btn-send' %>
       <% end %>
