--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,5 @@
 .loxam-types-container {
-  margin: 0 -15px 50px -15px;
+  margin: 0 -15px 70px -15px;
   // background-color: #fff;
   // padding: 25px 0;
   // box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
@@ -17,6 +17,7 @@
   .col-xs-12 {
     display: flex;
     justify-content: center;
+    margin-bottom: 10px;
   };
   img {
     height: 100px;
