--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
     <%= render 'shared/categories' %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <a href="#"><i id="scrollToTop" class="fa fa-arrow-circle-up"></i></a>
       <%= yield %>
     <%= javascript_pack_tag 'application' %>
     <%= render 'shared/footer' %>
