--- a/app/assets/stylesheets/components/_promo.scss
+++ b/app/assets/stylesheets/components/_promo.scss
@@ -2,15 +2,40 @@
   padding: 20px !important;
   h2 {
     margin-bottom: 35px !important;
-  }
+  };
 }
 
 .promo-card-image {
   background-size: contain;
   background-repeat: no-repeat;
+  position: relative;
   img {
     max-width: 100%;
-    cursor: pointer;
+  };
+}
+
+#expand-cross {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  font-size: 24px;
+  cursor: pointer;
+  transition: all 0.2s;
+  &:hover {
+    font-size: 25px;
+  }
+};
+
+#closing-cross {
+  position: absolute;
+  right: 45px;
+  top: 45px;
+  font-size: 55px;
+  cursor: pointer;
+  transition: all 0.2s;
+  color: #fff;
+  &:hover {
+    opacity: 0.8;
   }
 }
 
@@ -21,9 +46,10 @@
   position: fixed;
   top: 0;
   left: 0;
+  background-color: rgba(0,0,0,0.7);
   img {
     object-fit: scale-down;
-  }
+  };
 }
 
 .full-screen-promo-active {
