--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @category, remote: true  do |f| %>
-  <%= f.input :name %>
+  <%= f.input :name, label: 'Nom de la catégorie' %>
   <span class="error"></span>
   <%= f.button :submit, value: 'Ajouter', class: 'loxam-btn btn-send' %>
 <% end %>
