--- a/app/views/dashboard/_dashboard_stats.html.erb
+++ b/app/views/dashboard/_dashboard_stats.html.erb
@@ -1,4 +1,4 @@
-<div class="dashboard-section dashboard-stats-section dashboard-section-active" data-section="stats">
+<div class="dashboard-section dashboard-stats-section" data-section="stats">
   <div class="row">
     <h3 class="text-center">Catégories les plus consultées</h3>
     <div class="col-xs-12 col-sm-5">
