--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -5,10 +5,10 @@
     <div class="row tabs">
       <div class="col-xs-4 col-sm-2 tab" data-section="messages"><div class="reload-notif"><span class="nb-unchecked-messages notification"><%= Message.where(checked: false).count %></span></div> Messages</div>
       <div class="col-xs-4 col-sm-2 tab" data-section="categories">Catégories</div>
-      <div class="col-xs-4 col-sm-2 tab" data-section="products">Matériels</div>
+      <div class="col-xs-4 col-sm-2 tab tab-active" data-section="products">Matériels</div>
       <div class="col-xs-4 col-sm-2 tab" data-section="promos">Promos</div>
       <div class="col-xs-4 col-sm-2 tab" data-section="users">Clients/Fact°</div>
-      <div class="col-xs-4 col-sm-2 tab tab-active" data-section="stats">Stats</div>
+      <div class="col-xs-4 col-sm-2 tab" data-section="stats">Stats</div>
     </div>
     <%= render "dashboard/dashboard_messages" %>
     <%= render "dashboard/dashboard_categories" %>
