--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -114,4 +114,5 @@
 @import "dashboard/messages";
 @import "dashboard/categories";
 @import "dashboard/products";
+@import "dashboard/users";
 @import "dashboard/stats";
