--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :company, required: true %>
+    <%= f.input :name, required: true %>
     <label>Ajoutez une image (optionnel)</label>
     <%= f.file_field  :avatar %>
       <%= f.input :avatar_cache, as: :hidden  %>
