--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,4 +1,4 @@
-<p>Hi <%= @user.company %>,</p>
+<p>Hi <%= @user.name %>,</p>
 
 <p>Identifiant: <%= @user.email %></p>
 <p>Mot de pass: <%= @user.password %></p>
