--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -19,3 +19,13 @@
   width: 100%;
   margin: 20px 0;
 }
+
+.synchronization-btn {
+  padding: 15px 20px;
+  font-size: 24px;
+  font-weight: bold;
+  border: 2px solid #e10c22;
+  display: block;
+  width: fit-content;
+  margin: 40px auto;
+}
