--- a/app/views/dashboard/_dashboard_users.html.erb
+++ b/app/views/dashboard/_dashboard_users.html.erb
@@ -1,9 +1,19 @@
 <div class="dashboard-section dashboard-users-section" data-section="users">
   <h3>Clients</h3>
-  <%= link_to 'Synchroniser', synchronization_path, method: :post %>
-  <ul>
+  <%= link_to 'Synchroniser Facturation', synchronization_path, method: :post, class: 'loxam-btn synchronization-btn' %>
+  <div class="container-users">
+    <div class="row">
+      <div class="col-xs-4">Nom</div>
+      <div class="col-xs-4">Nb factures</div>
+      <div class="col-xs-4">Action</div>
+    </div>
     <% @users.each do |user| %>
-      <li><%= link_to user.company %></li>
+      <div class="row">
+        <div class="col-xs-4"><%= user.name %></div>
+        <div class="col-xs-4"><%= user.invoices.count %></div>
+        <div class="col-xs-4"><%= link_to "Supprimer", user_registration_path(user), remote: true, :method => :delete, :data => {:confirm => "Veux-tu vraiment supprimer ce client Jano?"} %>
+        </div>
+      </div>
     <% end %>
-  </ul>
+  </div>
 </div>
