--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container container-product">
+<div class="container container-product white-box">
   <h2><%= @product.name %></h2>
   <div class="row-presentation-product">
     <div class="col-xs-12 col-sm-6 image-col">
