waiting for jeano and creating a loxam google account

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -19,4 +19,8 @@
       <p><strong>Ouvert du lundi au vendredi de 7h00 à 12h00 et de 13h00 à 18h00</strong></p>
     </div>
   </div>
+
+  <div class="white-box">
+
+  </div>
 </div>
