--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -114,5 +114,6 @@
 @import "dashboard/messages";
 @import "dashboard/categories";
 @import "dashboard/products";
+@import "dashboard/promos_catalogs";
 @import "dashboard/users";
 @import "dashboard/stats";
