--- a/app/assets/stylesheets/pages/_vente.scss
+++ b/app/assets/stylesheets/pages/_vente.scss
@@ -1,4 +1,8 @@
-.container-vente .row {
+.container-vente {
+  padding: 15px;
+  p:first-child {
+    text-indent: 15px;
+  };
   h5 {
     color: $loxam-color;
   };
@@ -9,7 +13,19 @@
   li {
     font-size: 0.8em;
     font-weight: lighter;
-  }
+  };
+  h4 {
+    background-color: $light-gray;
+    padding: 10px 0;
+    text-align: center;
+    margin-bottom: 35px;
+  };
+}
+
+.img-catalog {
+  margin: 0 auto;
+  display: block;
+  width: fit-content;
 }
 
 .vente-page-flex-box {
