--- a/app/views/pages/vente.html.erb
+++ b/app/views/pages/vente.html.erb
@@ -1,5 +1,5 @@
 <div class="container container-vente white-box">
-  <p>Plus de 1400 produits à la vente, sélectionnés auprès des meilleurs fabricants parmi les marques de référence utilisées régulièrement par vos équipes.</p>
+  <p>Plus de <strong>1400 produits à la vente</strong>, sélectionnés auprès des meilleurs fabricants parmi les marques de référence utilisées régulièrement par vos équipes.</p>
 
   <div class="row">
     <div class="col-xs-12 col-sm-6">
@@ -281,6 +281,6 @@
 
   </div>
   <h4>ACCEDER AU CATALOGUE DE VENTE LOXAM</h4>
-  <a href="<%= @sales_catalog.link %>" target="_blank">
+  <a class="img-catalog" href="<%= @sales_catalog.link %>" target="_blank">
     <%= cl_image_tag @sales_catalog.image, height: '300' %></a>
 </div>
