Try something else about categories and promo

--- a/app/assets/stylesheets/components/_categories.scss
+++ b/app/assets/stylesheets/components/_categories.scss
@@ -23,8 +23,8 @@
 }
 
 .catgories-container {
-  // text-align: center;
-  margin-top: 10px;
+  margin: 10px 0;
+  width: 100vw;
 }
 
 .tags-catgories-container-small-screen {
