--- a/app/assets/stylesheets/components/_promo.scss
+++ b/app/assets/stylesheets/components/_promo.scss
@@ -12,17 +12,31 @@
   img {
     max-width: 100%;
   };
+  &:hover .promo-card-hover {
+    display: flex;
+  }
+}
+
+.promo-card-hover {
+  display: none;
+  position: absolute;
+  top: 0;
+  background-color: rgba(0,0,0,0.4);
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
 }
 
 #expand-cross {
-  position: absolute;
-  right: 15px;
-  top: 15px;
-  font-size: 24px;
+  font-size: 45px;
   cursor: pointer;
   transition: all 0.2s;
   &:hover {
-    font-size: 25px;
+    font-size: 65px;
   }
 };
 
