--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,11 @@
 <div class="container container-product white-box">
   <h2><%= @product.name %>
-    <%= simple_form_for [ @product, @new_favorit ] do |f| %>
-      <%= f.button :submit %>
+    <% if current_user.products.include? @product %>
+      <%= link_to 'Supprimer des favoris', product_favorit_path(@product), :method => :delete, :data => {:confirm => "Veux-tu vraiment supprimer ce matériel des favoris #{current_user.name.capitalize}?"} %>
+    <% else %>
+      <%= simple_form_for [ @product, @new_favorite ] do |f| %>
+        <%= f.button :submit, value: 'Mettre en favoris' %>
+      <% end %>
     <% end %>
   </h2>
   <div class="row-presentation-product">
