--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -12,7 +12,7 @@
           <div class="card-infos">
           <h3><%= product.name %></h3>
             <div class="card-price-and-btn">
-              <p>à partir de <span class="price"><%= product.price %>€</span>/jour H.T</p>
+              <p><span class="price"><%= product.price %>€</span> / jour H.T</p>
               <%= link_to 'Détails', product_path(product), class: 'loxam-btn' %>
             </div>
           </div>
