--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -39,7 +39,7 @@
   justify-content: space-between;
   align-items: flex-end;
   p {
-    margin: 0;
+    margin: 0 auto;
     font-size: 14px;
   };
   a {
@@ -55,7 +55,7 @@
 
 .price {
   color: $loxam-color;
-  font-weight: bolder;
+  font-weight: bold;
 }
 
 /* Card for Dashboard */
