--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
               <div class="card-infos">
               <h3><%= product.name %></h3>
                 <div class="card-price-and-btn">
-                  <p>à partir de <span class="price"><%= product.price %>€</span>/jour H.T</p>
+                  <p><span class="price"><%= product.price %>€</span> / jour H.T</p>
                   <%= link_to 'Détails', product_path(product), class: 'loxam-btn' %>
                 </div>
               </div>
@@ -49,7 +49,7 @@
               <div class="card-infos">
               <h3><%= product.name %></h3>
                 <div class="card-price-and-btn">
-                  <p>à partir de <span class="price"><%= product.price %>€</span>/jour H.T</p>
+                  <p><span class="price"><%= product.price %>€</span> / jour H.T</p>
                   <%= link_to 'Détails', product_path(product), class: 'loxam-btn' %>
                 </div>
               </div>
