--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,7 +28,6 @@
       <!-- Links when logged in -->
       <%= link_to "Location", location_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Vente", vente_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Réparation", reparation_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Contact", contact_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
@@ -59,7 +58,6 @@
       <!-- Login link (when logged out) -->
       <%= link_to "Location", location_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Vente", vente_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Réparation", reparation_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Contact", contact_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link loxam-btn" %>
     <% end %>
@@ -72,12 +70,11 @@
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li><%= link_to "Location", location_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
           <li><%= link_to "Vente", vente_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
-          <li><%= link_to "Réparation", reparation_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
           <li><%= link_to "Contact", contact_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
         <% if user_signed_in? %>
           <li>
               <%= link_to mon_espace_path(current_user) do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
+                <i class="fa fa-user"></i> <%= t(".profile", default: "Mon espace") %>
               <% end %>
             </li>
             <li>
@@ -87,11 +84,11 @@
             </li>
             <li>
               <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Deconnexion") %>
               <% end %>
             </li>
         <% else %>
-          <li><%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
+          <li><%= link_to t(".sign_in", default: "Se connecter"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
         <% end %>
       </ul>
     </div>
