--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -29,3 +29,10 @@
   width: fit-content;
   margin: 40px auto;
 }
+
+.btn-favorite {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  font-size: 28px;
+}
