--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,23 @@
 <div class="container container-product white-box">
-  <h2><%= @product.name %>
+  <div class="product-title-container">
+    <h2><%= @product.name %></h2>
     <% if current_user.products.include? @product %>
       <%= link_to 'Supprimer des favoris', product_favorite_path(@product), :method => :delete, :data => {:confirm => "Veux-tu vraiment supprimer ce matériel des favoris #{current_user.name.capitalize}?"} %>
     <% else %>
       <%= simple_form_for [ @product, @new_favorite ], remote: true do |f| %>
-        <%= f.button :submit, value: 'Mettre en favoris' %>
+        <%= button_tag(type: 'submit', class: 'btn-favorite', data: { toggle: 'popover', trigger: 'hover', content: 'Mettre en favoris', placement: 'left' }) do %>
+          <i class="fa fa-star"></i>
+          <script>
+            $(document).ready(function(){
+              $('[data-toggle="popover"]').popover({
+                html : true,
+                });
+            });
+          </script>
+        <% end %>
       <% end %>
     <% end %>
-  </h2>
+  </div>
   <div class="row-presentation-product">
     <div class="col-xs-12 col-sm-6 image-col">
       <% if @product.photo? %>
