--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,16 @@
   <div class="product-title-container">
     <h2><%= @product.name %></h2>
     <% if current_user.products.include? @product %>
-      <%= link_to 'Supprimer des favoris', product_favorite_path(@product), :method => :delete, :data => {:confirm => "Veux-tu vraiment supprimer ce matériel des favoris #{current_user.name.capitalize}?"} %>
+      <%= link_to product_favorite_path(current_user, @product), class: 'btn-favorite-active', :method => :delete, :data => { toggle: 'popover', trigger: 'hover', content: 'Retirer des favoris', placement: 'left' } do %>
+        <i class="fa fa-star"></i>
+        <script>
+          $(document).ready(function(){
+            $('[data-toggle="popover"]').popover({
+              html : true,
+              });
+          });
+        </script>
+      <% end %>
     <% else %>
       <%= simple_form_for [ @product, @new_favorite ], remote: true do |f| %>
         <%= button_tag(type: 'submit', class: 'btn-favorite', data: { toggle: 'popover', trigger: 'hover', content: 'Mettre en favoris', placement: 'left' }) do %>
