--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,20 +19,9 @@
         <% @best_searches.each do |product| %>
           <div class="col-xs-12 col-sm-6 col-item-card">
             <div class="item-card white-box">
-              <% if current_user.products.include? product %>
-                <%= link_to product_favorite_path(current_user, product), class: 'btn-favorite-active', :method => :delete, :data => { toggle: 'popover', trigger: 'hover', content: 'Retirer des favoris', placement: 'left' } do %>
-                  <i class="fa fa-star"></i>
-                  <script>
-                    $(document).ready(function(){
-                      $('[data-toggle="popover"]').popover({
-                        html : true,
-                        });
-                    });
-                  </script>
-                <% end %>
-              <% else %>
-                <%= simple_form_for [ product, @new_favorite ], remote: true do |f| %>
-                  <%= button_tag(type: 'submit', class: 'btn-favorite', data: { toggle: 'popover', trigger: 'hover', content: 'Mettre en favoris', placement: 'left' }) do %>
+              <div class="favorite-star-container favorite-star-container-product-<%= product.id %>" data-product-id= "<%= product.id %>">
+                <% if current_user.products.include? product %>
+                  <%= link_to product_favorite_path(current_user, product), class: 'btn-favorite-active', remote: true, :method => :delete, :data => { toggle: 'popover', trigger: 'hover', content: 'Retirer des favoris', placement: 'left' } do %>
                     <i class="fa fa-star"></i>
                     <script>
                       $(document).ready(function(){
@@ -42,8 +31,21 @@
                       });
                     </script>
                   <% end %>
+                <% else %>
+                  <%= simple_form_for [ product, Favorite.new ], remote: true do |f| %>
+                    <%= button_tag(type: 'submit', class: 'btn-favorite', data: { toggle: 'popover', trigger: 'hover', content: 'Mettre en favoris', placement: 'left' }) do %>
+                      <i class="fa fa-star"></i>
+                      <script>
+                        $(document).ready(function(){
+                          $('[data-toggle="popover"]').popover({
+                            html : true,
+                            });
+                        });
+                      </script>
+                    <% end %>
+                  <% end %>
                 <% end %>
-              <% end %>
+              </div>
               <% if product.photo? %>
                 <div class="item-card-image" style="background-image: url('<%= cl_image_path product.photo %>'); "></div>
               <% else %>
@@ -66,20 +68,9 @@
         <% @new_products.each do |product| %>
           <div class="col-xs-12 col-sm-6 col-item-card">
             <div class="item-card white-box">
-              <% if current_user.products.include? product %>
-                <%= link_to product_favorite_path(current_user, product), class: 'btn-favorite-active', :method => :delete, :data => { toggle: 'popover', trigger: 'hover', content: 'Retirer des favoris', placement: 'left' } do %>
-                  <i class="fa fa-star"></i>
-                  <script>
-                    $(document).ready(function(){
-                      $('[data-toggle="popover"]').popover({
-                        html : true,
-                        });
-                    });
-                  </script>
-                <% end %>
-              <% else %>
-                <%= simple_form_for [ product, @new_favorite ], remote: true do |f| %>
-                  <%= button_tag(type: 'submit', class: 'btn-favorite', data: { toggle: 'popover', trigger: 'hover', content: 'Mettre en favoris', placement: 'left' }) do %>
+              <div class="favorite-star-container-product-<%= product.id %>">
+                <% if current_user.products.include? product %>
+                  <%= link_to product_favorite_path(current_user, product), class: 'btn-favorite-active', remote: true, :method => :delete, :data => { toggle: 'popover', trigger: 'hover', content: 'Retirer des favoris', placement: 'left' } do %>
                     <i class="fa fa-star"></i>
                     <script>
                       $(document).ready(function(){
@@ -89,8 +80,21 @@
                       });
                     </script>
                   <% end %>
+                <% else %>
+                  <%= simple_form_for [ product, Favorite.new ], remote: true do |f| %>
+                    <%= button_tag(type: 'submit', class: 'btn-favorite', data: { toggle: 'popover', trigger: 'hover', content: 'Mettre en favoris', placement: 'left' }) do %>
+                      <i class="fa fa-star"></i>
+                      <script>
+                        $(document).ready(function(){
+                          $('[data-toggle="popover"]').popover({
+                            html : true,
+                            });
+                        });
+                      </script>
+                    <% end %>
+                  <% end %>
                 <% end %>
-              <% end %>
+              </div>
               <% if product.photo? %>
                 <div class="item-card-image" style="background-image: url('<%= cl_image_path product.photo %>'); "></div>
               <% else %>
