--- a/app/views/pages/mon_espace.html.erb
+++ b/app/views/pages/mon_espace.html.erb
@@ -2,11 +2,20 @@
   <h1><%= @user.name %></h1>
   <div class="row">
     <% @user.products.each do |product| %>
-      <div class="col-xs-12 col-sm-6 col-md-3 col-item-card">
+      <div class="col-xs-12 col-sm-6 col-md-3 col-item-card" id="mon-espace-card-<%= product.id %>">
         <div class="item-card white-box">
-          <%= link_to product_favorite_path(@user, product), :method => :delete, :data => {:confirm => "Veux-tu vraiment enlever #{product.name} des favoris #{current_user.name.capitalize}?"} do %>
-            <i class="fa fa-times"></i>
-          <% end %>
+          <div class="favorite-star-container-product-<%= product.id %>">
+            <%= link_to product_favorite_path(current_user, product), class: 'btn-favorite-active', remote: true, :method => :delete, :data => { toggle: 'popover', trigger: 'hover', content: 'Retirer des favoris', placement: 'left' } do %>
+              <i class="fa fa-star"></i>
+              <script>
+                $(document).ready(function(){
+                  $('[data-toggle="popover"]').popover({
+                    html : true,
+                    });
+                });
+              </script>
+            <% end %>
+          </div>
           <% if product.photo? %>
             <div class="item-card-image" style="background-image: url('<%= cl_image_path product.photo %>'); "></div>
           <% else %>
