--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,31 +1,33 @@
 <div class="container container-product white-box">
   <div class="product-title-container">
     <h2><%= @product.name %></h2>
-    <% if current_user.products.include? @product %>
-      <%= link_to product_favorite_path(current_user, @product), class: 'btn-favorite-active', :method => :delete, :data => { toggle: 'popover', trigger: 'hover', content: 'Retirer des favoris', placement: 'left' } do %>
-        <i class="fa fa-star"></i>
-        <script>
-          $(document).ready(function(){
-            $('[data-toggle="popover"]').popover({
-              html : true,
-              });
-          });
-        </script>
-      <% end %>
-    <% else %>
-      <%= simple_form_for [ @product, @new_favorite ], remote: true do |f| %>
-        <%= button_tag(type: 'submit', class: 'btn-favorite', data: { toggle: 'popover', trigger: 'hover', content: 'Mettre en favoris', placement: 'left' }) do %>
+    <div class="favorite-star-container-product-<%= @product.id %>">
+      <% if current_user.products.include? @product %>
+        <%= link_to product_favorite_path(current_user, @product), class: 'btn-favorite-active', remote: true, :method => :delete, :data => { toggle: 'popover', trigger: 'hover', content: 'Retirer des favoris', placement: 'left' } do %>
           <i class="fa fa-star"></i>
           <script>
             $(document).ready(function(){
               $('[data-toggle="popover"]').popover({
                 html : true,
-                });
+              });
             });
           </script>
         <% end %>
+      <% else %>
+        <%= simple_form_for [ @product, Favorite.new ], remote:true do |f| %>
+          <%= button_tag(type: 'submit', class: 'btn-favorite', data: { toggle: 'popover', trigger: 'hover', content: 'Mettre en favoris', placement: 'left' }) do %>
+            <i class="fa fa-star"></i>
+            <script>
+              $(document).ready(function(){
+                $('[data-toggle="popover"]').popover({
+                  html : true,
+                  });
+              });
+            </script>
+          <% end %>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
   <div class="row-presentation-product">
     <div class="col-xs-12 col-sm-6 image-col">
