--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,14 +20,14 @@
           <div class="col-xs-12 col-sm-6 col-item-card">
             <div class="item-card white-box">
               <div class="favorite-star-container favorite-star-container-product-<%= product.id %>" data-product-id= "<%= product.id %>">
-                <% if current_user.products.include? product %>
+                <% if (user_signed_in?) && (current_user.products.include? product) %>
                   <%= link_to product_favorite_path(current_user, product), class: 'btn-favorite-active', remote: true, :method => :delete, :data => { toggle: 'popover', trigger: 'hover', content: 'Retirer des favoris', placement: 'left' } do %>
                     <i class="fa fa-star"></i>
                     <script>
                       $(document).ready(function(){
                         $('[data-toggle="popover"]').popover({
                           html : true,
-                          });
+                        });
                       });
                     </script>
                   <% end %>
@@ -39,7 +39,7 @@
                         $(document).ready(function(){
                           $('[data-toggle="popover"]').popover({
                             html : true,
-                            });
+                          });
                         });
                       </script>
                     <% end %>
@@ -69,7 +69,7 @@
           <div class="col-xs-12 col-sm-6 col-item-card">
             <div class="item-card white-box">
               <div class="favorite-star-container-product-<%= product.id %>">
-                <% if current_user.products.include? product %>
+                <% if (user_signed_in?) && (current_user.products.include? product) %>
                   <%= link_to product_favorite_path(current_user, product), class: 'btn-favorite-active', remote: true, :method => :delete, :data => { toggle: 'popover', trigger: 'hover', content: 'Retirer des favoris', placement: 'left' } do %>
                     <i class="fa fa-star"></i>
                     <script>
@@ -81,7 +81,7 @@
                     </script>
                   <% end %>
                 <% else %>
-                  <%= simple_form_for [ product, Favorite.new ], remote: true do |f| %>
+                  <%= simple_form_for [ product, Favorite.new ], remote: true do %>
                     <%= button_tag(type: 'submit', class: 'btn-favorite', data: { toggle: 'popover', trigger: 'hover', content: 'Mettre en favoris', placement: 'left' }) do %>
                       <i class="fa fa-star"></i>
                       <script>
