--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,14 +14,14 @@
           </script>
         <% end %>
       <% else %>
-        <%= simple_form_for [ @product, Favorite.new ], remote:true do |f| %>
+        <%= simple_form_for [ @product, Favorite.new ], remote:true do %>
           <%= button_tag(type: 'submit', class: 'btn-favorite', data: { toggle: 'popover', trigger: 'hover', content: 'Mettre en favoris', placement: 'left' }) do %>
             <i class="fa fa-star"></i>
             <script>
               $(document).ready(function(){
                 $('[data-toggle="popover"]').popover({
                   html : true,
-                  });
+                });
               });
             </script>
           <% end %>
